Fixed glitch where some code snippets are hard to read

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -161,6 +161,7 @@ body {
   overflow: hidden;
   background-color: #2d2d2d;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  color: white;
 }
 
 /* Line Numbers Gutter */
